Firebase Phone Auth Done.

--- a/app/src/main/res/layout/activity_next.xml
+++ b/app/src/main/res/layout/activity_next.xml
@@ -13,6 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:text="Login Via Email"
+        android:drawableLeft="@drawable/email"
         android:layout_marginTop="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -32,26 +33,15 @@
         app:layout_constraintTop_toBottomOf="@+id/btnEmail" />
 
     <Button
-        android:id="@+id/btnFacebook"
+        android:id="@+id/btnOtp"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        android:text="Login Via Facebook"
-        android:drawableLeft="@drawable/facebook"
+        android:text="Login Via Otp"
+        android:drawableLeft="@drawable/phone"
         android:layout_marginTop="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnGoogle" />
-
-    <Button
-        android:id="@+id/btnOtp"
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:text="Login Via Otp"
-        android:layout_marginTop="16dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnFacebook" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
