firebase Data Retrive show on Recycler View.

--- a/app/src/main/res/layout/activity_next.xml
+++ b/app/src/main/res/layout/activity_next.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:layout_margin="12dp"
     android:layout_gravity="center"
-    tools:context=".NextActivity">
+    tools:context=".Activity.NextActivity">
 
     <Button
         android:id="@+id/btnEmail"
