--- a/app/src/main/res/layout/activity_firebase_db.xml
+++ b/app/src/main/res/layout/activity_firebase_db.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".FirebaseDbActivity">
+    tools:context=".Activity.FirebaseDbActivity">
 
     <TextView
         android:id="@+id/textView2"
@@ -84,8 +84,18 @@
         android:layout_height="?attr/actionBarSize"
         android:layout_margin="16dp"
         android:text="Upload"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/btnShowRecords"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/btnShowRecords"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:layout_margin="16dp"
+        android:text="Show Records"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
