--- a/app/src/main/res/layout/activity_register_email.xml
+++ b/app/src/main/res/layout/activity_register_email.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_gravity="center"
-    tools:context=".registerEmailActivity">
+    tools:context=".Activity.registerEmailActivity">
 
     <TextView
         android:id="@+id/textView2"
